add elements towers and disc

--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tower of Hanoi</title>
-    <link rel="stylesheet" href="/assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-
-    <div>oi</div>
+    <h1>Tower of Hanoi</h1>
+    <div id="main">
+    </div>
     <script src="assets/js/script.js"></script>
 </body>
 </html>
