add logic gaming test

--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-    <h1>Tower of Hanoi</h1>
-    <div id="main">
-    </div>
-    <script src="assets/js/script.js"></script>
+<h1>Tower of Hanoi</h1>
+<h2 id="jogada">Escolha um bloco para mover:</h2>
+<div id="main">
+</div>
+<script src="assets/js/script.js"></script>
 </body>
 </html>
