--- a/index.html
+++ b/index.html
@@ -9,8 +9,11 @@
 </head>
 <body>
     <h1>Tower of Hanoi</h1>
-    <div id="main">
+    <h2 id="jogada">Escolha um disco para mover:</h2>
+    <div id="main"></div>
+    <div class="button">
+        <button id="reset">Reset</button>
     </div>
-    <script src="assets/js/script.js"></script>
+<script src="assets/js/script.js"></script>
 </body>
 </html>
