--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <h1>Tower of Hanoi</h1>
     <h2 id="jogada">Escolha um disco para mover:</h2>
+    <h3 id="movescount">Moves: 0</h3>
     <div id="main"></div>
     <div class="button">
         <button id="reset">Reset</button>
